--- a/src/main/webapp/console.html
+++ b/src/main/webapp/console.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Smart Jarro:</title>
+		<title>Grappa: Console WEB</title>
 	</head>
 	<style>
 		.item-menu{margin:10px auto;padding: 5px 5px;display:inline-block;}
@@ -12,23 +12,34 @@
 		.meio-botao{width:202px;}
 	</style>
 	<body>
-		<h1>Smart Jarro:</h1>
-		<form id="novo-jarro" action="v1/jarro.xml" method="post">
-			<label class="item-menu label">Username:</label>
-			<input id="username" class="item-menu campo" type="text" name="username"/>
+		<h1>Grappa: Console WEB</h1>
+		<form id="console" action="v1/resultado-pacote.xml" method="post">
+			<label class="item-menu label">Endereço:</label>
+			<input id="endereco" class="item-menu campo" type="text" name="endereco"/>
 			<br/>
-			<label class="item-menu label">Email:</label>
-			<input id="email" class="item-menu campo" type="text" name="email"/>
+			<label class="item-menu label">Tipo:</label>
+			<select id="tipo" class="item-menu campo" name="tipo">
+				<option value="LEITURA">Leitura</option>
+				<option value="ESCRITA">Escrita</option>
+			</select>
 			<br/>
-			<label class="item-menu label">Senha:</label>
-			<input id="senha" class="item-menu campo" type="password" name="senha"/>
+			<label class="item-menu label">Conexão:</label>
+			<select id="conexao" class="item-menu campo" name="conexao">
+				<option value="REGISTRADOR">Controlador</option>
+				<option value="GPIO">Pino Elétrico</option>
+				<option value="USB">USB</option>
+			</select>
+			<br/>
+			<label class="item-menu label">Corpo:</label>
+			<input id="corpo" class="item-menu campo" type="text" name="corpo"/>
 			<br/>
 			<input id="ajax"  type="checkbox" name="ajax" value="ajax">Ajax<br/>
 			<input class="item-menu meio-botao" type="reset" value="Limpar"/>
-			<input class="item-menu meio-botao" type="button" value="Registrar Jarro" onclick="registrarJarro()"/><br/>
+			<input class="item-menu meio-botao" type="button" value="Enviar Pacote" onclick="enviarPacote()"/><br/>
 			<input class="item-menu botao" type="button" value="Examinar Log" onclick="redirecionar('v1/log')"/><br/>
 			<input class="item-menu meio-botao" type="button" value="Examinar Registradores" onclick="redirecionar('v1/registradores')"/>
 			<input class="item-menu meio-botao" type="button" value="Examinar GPIO" onclick="redirecionar('v1/gpio')"/><br/>
+			<input class="item-menu botao" type="button" value="Limpar Registradores" onclick="limparRegistradores()"/><br/>
 		</form>
 		<textarea id="saida-ajax" rows="6" cols="55">Saída Resposta Ajax.</textarea> 
 	</body>
@@ -41,22 +52,23 @@
 			requisicao.open( 'DELETE', 'v1/registradores', false );
 			requisicao.send();
 		};
-		var registrarJarro = function(){
+		var enviarPacote = function(){
 			var ajax = document.getElementById('ajax');
 			if(ajax.checked == true){
-				var corpo = { jarro : {
-								username : document.getElementById('username').value,
-								email : document.getElementById('email').value,
-								senha : document.getElementById('senha').value
+				var corpo = { grappa : {
+								endereco : document.getElementById('endereco').value,
+								tipo : document.getElementById('tipo').value,
+								conexao : document.getElementById('conexao').value,
+								corpo : document.getElementById('corpo').value
 							}
 						};
 				var requisicao = new XMLHttpRequest();
-				requisicao.open( 'POST', 'v1/jarro', false );
+				requisicao.open( 'POST', 'v1/resultado-pacote', false );
 				requisicao.setRequestHeader('Content-type', 'application/json;charset=UTF-8');
 				requisicao.send(JSON.stringify(corpo));
 				document.getElementById('saida-ajax').innerHTML = requisicao.responseText;
 			}else{
-				document.getElementById('novo-jarro').submit();
+				document.getElementById('console').submit();
 			}
 		};
 	</script>
