--- a/src/main/webapp/console.html
+++ b/src/main/webapp/console.html
@@ -58,7 +58,7 @@
 								endereco : document.getElementById('endereco').value,
 								tipo : document.getElementById('tipo').value,
 								conexao : document.getElementById('conexao').value,
-								corpo : document.getElementById('corpo').value
+								valor : document.getElementById('corpo').value
 							}
 						};
 				var requisicao = new XMLHttpRequest();
